<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="Sign In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/EmailValue"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="Email"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/PassValue"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnSignValue"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="sign in"
            android:textColor="#777" />

        <TextView
            android:id="@+id/Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Forgot Password?"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnSignUpValue"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="sign up"
            android:textColor="#777" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="10dp"
            android:text="Or Sign up with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_marginRight="15dp"
                android:background="@drawable/google"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <ImageButton
                android:id="@+id/ibFaceBook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/facebook_box" />
            <ImageButton
                android:background="@drawable/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>