...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.Fragment_EditProfile" >

    <RelativeLayout
        android:id="@+id/FragmentRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearFragment"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-5dp"
            android:orientation="vertical">

...
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=".." />

...
