<resources>
    <string name="app_name">Findiro</string>

    <string name="home">Home</string>

    <string name="my_groups">My Groups</string>
    <string name="all_groups">All Groups</string>
    <string name="create_group">Create Group</string>

    <string name="update_profile">Update Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="facebook_app_id">566496764287500</string>
    <string name="fb_login_protocol_scheme">fb566496764287500</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="group_name">Group name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
